--- a/VR.html
+++ b/VR.html
@@ -30,14 +30,14 @@
       margin: 5px;
       font-size: 16px;
       border: none;
-      background-color: #007bff;
+      background-color: rgb(26, 60, 126);
       color: white;
       border-radius: 5px;
       cursor: pointer;
     }
 
     button:hover {
-      background-color: #0056b3;
+      background-color: rgb(21, 46, 97);
     }
 
     button:disabled {
