--- a/index.html
+++ b/index.html
@@ -53,18 +53,17 @@
 <body>
 
   <div class="contenedor">
-    <img src="models/Brush-it.png">
-    <h1>¿Cuentas con un marcador especial?</h1>
-    <button onclick="redirigir('movil')">Si</button>
-    <button onclick="redirigir('pc')">No</button>
+    <h1>¿Qué dispositivo estás usando?</h1>
+    <button onclick="redirigir('movil')">Dispositivo Móvil</button>
+    <button onclick="redirigir('pc')">Ordenador</button>
   </div>
 
   <script>
     function redirigir(dispositivo) {
       if (dispositivo === 'movil') {
-        window.location.href = "Instrucciones.html"; // cambia a tu URL para móviles
+        window.location.href = "RA-VR-M.html"; // cambia a tu URL para móviles
       } else if (dispositivo === 'pc') {
-        window.location.href = "InstruccionesVR.html"; // cambia a tu URL para ordenadores
+        window.location.href = "RA-VR.html"; // cambia a tu URL para ordenadores
       }
     }
   </script>
