--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <body>
 
   <div class="contenedor">
+    <img src="models/Brush-it.png">
     <h1>¿Qué dispositivo estás usando?</h1>
     <button onclick="redirigir('movil')">Dispositivo Móvil</button>
     <button onclick="redirigir('pc')">Ordenador</button>
