--- a/Instrucciones.html
+++ b/Instrucciones.html
@@ -54,7 +54,7 @@
 
 <body style="margin: 0; overflow: hidden;">
   <div class="contenedor">
-    <img src="models/Brush-it.png" alt="Instrucciones" />
+    <h2>Instrucciones</h2>
     <p><strong>Utiliza tu cámara y enfoca de diferentes maneras el cuadro para observar desde diferentes ángulos.</strong></p>
     <button onclick="redirigir('movil')">Entendido</button>
   </div>
