--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
   <div class="contenedor">
     <img src="models/Brush-it.png">
+    <h1>Tu apoyo en cepillado dental</h1>
+     <br>&nbsp<br>
     <h1>¿Qué dispositivo estás usando?</h1>
     <button onclick="redirigir('movil')">Dispositivo Móvil</button>
     <button onclick="redirigir('pc')">Ordenador</button>
