--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <img src="models/Brush-it.png">
     <h1>Tu apoyo en cepillado dental</h1>
      <br>&nbsp<br>
-    <h1>¿Qué dispositivo estás usando?</h1>
+    <p>¿Qué dispositivo estás usando?</p>
     <button onclick="redirigir('movil')">Dispositivo Móvil</button>
     <button onclick="redirigir('pc')">Ordenador</button>
   </div>
