--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
   <div class="contenedor">
     <img src="models/Brush-it.png">
-    <h1>Tu apoyo en cepillado dental</h1>
+    <p>Tu apoyo en cepillado dental</p>
      <br>&nbsp<br>
-    <p>¿Qué dispositivo estás usando?</p>
+    <h1>¿Qué dispositivo estás usando?</h1>
     <button onclick="redirigir('movil')">Dispositivo Móvil</button>
     <button onclick="redirigir('pc')">Ordenador</button>
   </div>
